# ntnu_bidata

./: .gitignore  README.md
IDATT1001/MappeVurdering/src/: Item.java  ItemRegister.java  Main.java  Type.java
IDATT1001/Oving 11/src/: Main.java  Property.java  PropertyRegister.java
IDATT2101/AlgDat1/src/: Main.java  StockCalculator.java
IDATT2101/AlgDat2/src/: Calculator.java  Main.java
IDATT2101/AlgDat3/src/: Main.java  Sorter.java
IDATT2101/AlgDat4/src/: BinaryTree.java  JosephusProblem.java  Main.java  Node.java  TreeNode.java
IDATT2101/AlgDat5/src/: DoubleHash.java  HashList.java  Hashtable.java  LinearProbe.java  Main.java  MainPart2.java  Node.java
IDATT2101/AlgDat6/src/: Edge.java  Graph.java  Main.java  Node.java  Previous.java  TopoLst.java  ø6g7
IDATT2101/AlgDat7/src/: Edge.java  Graph.java  ListQueue.java  Main.java  Previous.java
IDATT2101/AlgDat8/src/: Compressor.java  Decompressor_V2.java  opg8-kompr.lyx.comp
IDATT2104/Nett5/Nettverk5/: README.md  package-lock.json  package.json
IDATT2104/Nett6/: Server.js
IDATT2104/NettOving2/: CMakeLists.txt  Workers.cpp  Workers.h  main.cpp
IDATT2104/Oving1/: main.cpp
IDATT2105/Oving1V3/: Rosegard.html  Style.css
IDATT2105/Oving2/: package-lock.json
INFT2503/C++Oving1/: CMakeLists.txt
INFT2503/CppOving4/: CMakeLists.txt  Oppgave1.cpp
INFT2503/CppOving5/: CMakeLists.txt  main.cpp
INFT2503/cppOving3/: CMakeLists.txt
INFT2503/cppOving3/Oppgave1og2/: Circle.h
INFT2503/cppOving3/Oppgave3/: Commodity.cpp  Commodity.h  Main.cpp
INFT2503/cppOving3/Oppgave4/: Main.cpp
(+52 files in other folders)
